--- a/index.html
+++ b/index.html
@@ -2085,8 +2085,245 @@
               </figure>
 
 
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.18 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.18 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
 
 
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.18 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.18 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.19 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.19 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.19 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.19 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.20 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.20 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.20 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.20 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.21 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.21 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.22 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.22 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.22 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.22 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.23 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.23 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.23 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.23 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.24 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.24 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.24 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.24 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.25 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.25 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.25 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.13.25 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.17.51 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.17.51 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\clutch bags\WhatsApp Image 2020-10-02 at 7.17.52 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\clutch bags\WhatsApp Image 2020-10-02 at 7.17.52 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
 
               <div class="portfolio-info">
                 <h4><a href="#">Purse</a></h4>
