--- a/index.html
+++ b/index.html
@@ -2331,6 +2331,260 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.36 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.36 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.37 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.37 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.38 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.38 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.38 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.38 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.39 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.39 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.39 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.39 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.40 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.40 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.40 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.40 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.41 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.41 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.41 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.41 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.42 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.42 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.42 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.42 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.43 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.43 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.43 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.43 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.44 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.44 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.44 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.44 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.45 PM.jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.06.45 PM.jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img\dozen item\WhatsApp Image 2020-10-02 at 7.07.34 PM (1).jpeg" class="img-fluid" alt="">
+                <a href="img\dozen item\WhatsApp Image 2020-10-02 at 7.07.34 PM (1).jpeg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Purse</a></h4>
+                <p>Purse</p>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
